# AICMO

./: .ci-rerun  .coverage  .dockerignore  .env  .env.dev  .env.example  .gitignore  .mypy_last.txt  .pre-commit-config.yaml  .yamllint.yml  4LAYER_EXACT_CHANGES.md  4LAYER_GENERATION_IMPLEMENTATION_COMPLETE.md  4LAYER_GENERATION_PLAN.md  4LAYER_QUICK_START.md  8_FIX_QUALITY_ENFORCER_IMPLEMENTATION.md  AGENCY_BASELINE_AUDIT_REPORT.md  AGENCY_BASELINE_INTEGRATION.md  AGENCY_BASELINE_QUICK_START.md  AGENCY_BASELINE_SUMMARY.txt  AGENCY_GRADE_IMPLEMENTATION_COMPLETE.md  AGENCY_GRADE_PDF_EXPORT_COMPLETE.md  AGENCY_IN_A_BOX_ROADMAP.md  AGENCY_PDF_EXPORT_IMPLEMENTATION.md  AGENCY_PDF_PATH_IMPLEMENTATION_COMPLETE.md  AGENCY_PDF_SMOKE_TEST_COMPLETE.md  AGENCY_QUALITY_GATE_COMPLETE.md  AICMO_ACQUISITION_INDEX.md  AICMO_ACQUISITION_STATUS.md  AICMO_AUDIT_COMPLETION_SUMMARY.md  AICMO_BRIEF_FIX_COMPLETE.md  AICMO_BRIEF_FIX_EXECUTION_SUMMARY.md  AICMO_BRIEF_FIX_FILE_MANIFEST.txt  AICMO_BRIEF_FIX_FINAL_STATUS.md  AICMO_BRIEF_FIX_PROGRESS.md  AICMO_CAMPAIGN_OS_AUDIT.md  AICMO_COMPREHENSIVE_AUDIT_FINAL.md  AICMO_FEATURE_CHECKLIST.md  AICMO_FIVE_PHASE_SYSTEM_COMPLETE.md  AICMO_FIXLOG.md  AICMO_FIX_IMPLEMENTATION_SUMMARY.md  (+635 more)
.aicmo/: learn_store.jsonl
.alembic_tmp/: site_test.sqlite
.github/: pull_request_template.md
.streamlit/: config.toml  secrets.toml
aicmo/: __init__.py  logging.py  (+1 more)
app/: db.py  (+2 more)
capsule-core/: CHANGELOG.md  README.md  pyproject.toml
capsule-core/capsule_core/: __init__.py  logging.py  metrics.py  run.py  webhooks.py
capsule-core/tests/: test_core_imports.py
(+1481 files in other folders)
