[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "capsule-core"
version = "0.1.1"
description = "Shared run schemas, metrics, logging, and webhook helpers for AI-CMO capsules."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AI-CMO"}]
dependencies = ["pydantic>=2.7,<3", "httpx>=0.27,<0.28", "structlog>=24.1,<25", "anyio>=4"]

[tool.hatch.build.targets.wheel]
packages = ["capsule_core"]
